--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css" href="assets/css/reset.css">
 </head>
+
 <body>
-    
+
+    <p id="result"></p>
+
+    <div class="crystals">
+
+    </div>
+
+    <script type="text/javascript" src="assets/javascript/game.js"></script>
 </body>
+
 </html>
